# autonomous-web-agent-v2.1

./: .env.example  .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
benchmark/: checks.py  run_benchmark.py  tasks.yaml
dashboard/: app.py
dashboard/templates/: _icons.html  base.html  benchmark.html  index.html  run.html
docs/: demo.webm
sandbox/: server.py
sandbox/templates/: _icons.html  base.html  complete.html  confirm.html  dashboard.html  home.html  login.html  payment.html  shipping.html  shop.html  todo.html
scripts/: capture_shots.py  record_demo.py  seed_demo.py
tests/: conftest.py  helpers.py  test_agent_loop.py  test_benchmark.py  test_dashboard.py  test_llm_layer.py  test_perception_actions.py  test_reliability.py  test_resume_scheduler.py  test_sandbox_smoke.py
web_agent/: __init__.py  agent.py  browser.py  cli.py  config.py  scheduler.py
web_agent/actions/: schema.py
web_agent/executor/: playwright_executor.py
web_agent/llm/: anthropic_client.py  base.py  factory.py  openai_client.py
web_agent/observability/: trace.py
web_agent/perception/: accessibility.py
web_agent/planner/: planner.py
web_agent/reliability/: controller.py
web_agent/storage/: db.py  repository.py
