[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-web-agent"
version = "0.1.0"
description = "A general-purpose autonomous web agent: perceive a page, plan the next action with an LLM, execute with Playwright, recover from failures, and log a structured trace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "anthropic>=0.40",
    "openai>=1.40",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
web-agent = "web_agent.cli:app"

[tool.setuptools]
packages = ["web_agent", "sandbox", "dashboard", "benchmark"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # typer uses function-call defaults
